# roberto_sim

./: Dockerfile  README.md  build.sh  run.sh
src/roberto_control/: CMakeLists.txt  package.xml
src/roberto_control/config/: roberto_control.yaml  roberto_sim_controllers_plugins.xml
src/roberto_control/include/: motor_plugin.h  roberto_position_controller.h  roberto_velocity_controller.h
src/roberto_control/launch/: roberto_control.launch
src/roberto_control/msg/: MotorState.msg
src/roberto_control/src/: mimic_joint_plugin.cpp  motor_plugin.cpp  roberto_position_controller.cpp  roberto_velocity_controller.cpp  state_publisher.cpp
src/roberto_gazebo/: CMakeLists.txt  package.xml
src/roberto_gazebo/include/: JointController.h  gazebo_ros_utils.h  imu_9dof_plugin.h  motor_plugin.h  noise_sim_model.h  pubQueue.h
src/roberto_gazebo/launch/: gripper.launch  roberto_joy.launch  roberto_line_test.launch  roberto_odom_test.launch  roberto_ramp_test.launch  roberto_world.launch  seesaw_test.launch
src/roberto_gazebo/plugins/: gazebo_ros_utils.cpp  gripper_plugin.cpp  imu_9dof_plugin.cpp  mimic_joint_plugin.cpp  motor_plugin.cpp  noise_sim_model.cpp
src/roberto_gazebo/worlds/: ramp_test.world  roberto.world  simple_ellipse.world
src/roberto_gazebo/worlds/SketchUp/: golfbold.skp  port.skp  ramper_og_trappe.skp  simple_ellipse.skp  startplade.skp  vippe_bund.skp  vippe_top.skp
src/roberto_gazebo/worlds/dae/: golfbold.dae  port.dae  ramper_og_trappe.dae  ramper_og_trappe_3.dae  simple_ellipse.dae  simple_ellipse_2.dae  vippe_top.dae
src/roberto_models_indigo/: CMakeLists.txt  package.xml
src/roberto_models_indigo/launch/: roberto.rviz
src/roberto_models_indigo/models/: macros.xacro  materials.xacro  roberto.gazebo  roberto.xacro
src/roberto_models_indigo/models/meshes/: platform.dae
src/roberto_models_indigo/models/sensors/camera/: camera.xacro
src/roberto_models_indigo/models/sensors/imu/: imu.xacro
src/roberto_models_jade/: CMakeLists.txt  package.xml
src/roberto_models_jade/launch/: roberto_rviz.launch
src/roberto_models_jade/models/obstacles/seesaw/: seesaw.xacro
src/roberto_models_jade/models/obstacles/seesaw/meshes/: ramper_og_trappe_2.dae
src/roberto_models_jade/models/platform/: roberto.urdf  roberto.xacro  roberto_plugins.gazebo
src/roberto_models_jade/models/platform/roberto_body/: body.xacro  parameters.xacro  platform_bottom.xacro  platform_top.xacro  spacer.xacro  wheel.xacro  wheel_mount.xacro
src/roberto_models_jade/models/platform/roberto_body/meshes/: platform_top.dae
src/roberto_models_jade/models/sensors/IMU/: imu.xacro
src/roberto_models_jade/models/sensors/TOF/: tof.xacro
src/roberto_models_jade/models/sensors/camera/: camera.xacro
src/roberto_models_jade/models/tools/gripper/: gripper.xacro  test.xacro
src/roberto_models_jade/models/tools/gripper/meshes/: gripper_bottom_connector_servo.dae  gripper_simpel.dae  gripper_with_gear_left.dae  servo1_mount.dae  servo1_mount2.dae  servo1_mount3.dae
src/roberto_models_kinetic/: CMakeLists.txt  package.xml
src/roberto_models_kinetic/launch/: roberto_rviz.launch
src/roberto_models_kinetic/models/obstacles/seesaw/: seesaw.xacro
src/roberto_models_kinetic/models/obstacles/seesaw/meshes/: vippe_bund.dae
src/roberto_models_kinetic/models/platform/: roberto.xacro
src/roberto_models_kinetic/models/platform/roberto_body/: parameters.xacro  platform_bottom.xacro  platform_top.xacro  spacer.xacro  wheel.xacro  wheel_mount.xacro
src/roberto_models_kinetic/models/sensors/TOF/: tof.xacro
src/roberto_models_kinetic/models/sensors/camera/: camera.xacro
src/roberto_models_kinetic/models/tools/gripper/: gripper.xacro  test.xacro
src/roberto_models_kinetic/models/tools/gripper/meshes/: gripper_bottom_connector.dae  gripper_with_gear_right.dae  servo1_mount4.dae  servo1_mount5.dae
src/uC_software/encoder/: AS5048A.lst  Makefile  TWI_slave.h  TWI_slave.lst  encoder.c  encoder.hex  encoder.lst  encoder.out  encoder.out.map
src/uC_software/motor/: Makefile  STM32F103XB_FLASH.ld  motors.hex  motors.lss  motors.none-eabi  motors.sym
src/uC_software/motor/.dep/: DCMotor.o.d  duration.o.d  encoder.o.d  led.o.d  main.o.d  misc.o.d  motor.o.d  motorSettings.o.d  motors.o.d  servo.o.d  stm32_time.o.d  stm32f10x_adc.o.d  stm32f10x_bkp.o.d  stm32f10x_can.o.d  stm32f10x_cec.o.d  stm32f10x_crc.o.d  stm32f10x_dac.o.d  stm32f10x_dbgmcu.o.d  stm32f10x_dma.o.d  stm32f10x_exti.o.d  stm32f10x_flash.o.d  stm32f10x_fsmc.o.d  stm32f10x_gpio.o.d  stm32f10x_i2c.o.d  stm32f10x_iwdg.o.d  stm32f10x_pwr.o.d  stm32f10x_rcc.o.d  stm32f10x_sdio.o.d  stm32f10x_spi.o.d  stm32f10x_tim.o.d  stm32f10x_usart.o.d  stm32f10x_wwdg.o.d  system_stm32f10x.o.d  time.o.d
src/uC_software/motor/OLD/INC/: debug.h  frame802154.h
src/uC_software/motor/OLD/INC/f1/: stm32f1xx_hal_conf.h
src/uC_software/motor/OLD/SRC/: eeprom.c  frame802154.c  lps25h.c  port.c  sys.c
src/uC_software/motor/OLD/SRC/f1/: i2c.c  init_hal.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  usbd_conf.c
src/uC_software/motor/inc/: DCMotor.h  encoder.h  led.h  motor.h  motorSettings.h  motors.h  pid.h  servo.h  stm32_time.h
src/uC_software/motor/lib/STM32F10x_StdPeriph_Driver/src/: misc.lst  stm32f10x_adc.lst  stm32f10x_bkp.lst  stm32f10x_can.lst  stm32f10x_cec.lst  stm32f10x_crc.lst  stm32f10x_dac.lst  stm32f10x_dbgmcu.lst  stm32f10x_dma.lst  stm32f10x_exti.lst  stm32f10x_flash.lst  stm32f10x_fsmc.lst  stm32f10x_gpio.lst  stm32f10x_i2c.lst  stm32f10x_iwdg.lst  stm32f10x_pwr.lst  stm32f10x_rcc.lst  stm32f10x_sdio.lst  stm32f10x_spi.lst  stm32f10x_tim.lst  stm32f10x_usart.lst  stm32f10x_wwdg.lst
src/uC_software/motor/lib/ros_lib/: ArduinoHardware.h  duration.lst  time.lst
src/uC_software/motor/lib/ros_lib_BAK/: ArduinoHardware.h  duration.lst  time.lst
src/uC_software/motor/src/: DCMotor.cpp  DCMotor.lst  encoder.c  encoder.lst  led.c  led.lst  main.cpp  main.lst  motor.cpp  motor.lst  motorSettings.cpp  motorSettings.lst  motors.c  motors.lst  motors_BAK.c  pid.c  servo.cpp  servo.lst  servo_BAK.c  stm32_time.c  stm32_time.lst
(+4 files in other folders)
