<?xml version="1.0"?>
<package>
  <name>roberto_control</name>
  <version>0.0.0</version>
  <description>The roberto_control package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="mathias@todo.todo">mathias</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>yaml-cpp</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>effort_controllers</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>roberto_msgs</build_depend>


  <run_depend>roscpp</run_depend>
  <run_depend>roberto_msgs</run_depend>
  <run_depend>controller_interface</run_depend>
  <run_depend>control_toolbox</run_depend>
  <run_depend>effort_controllers</run_depend>
  <run_depend>yaml-cpp</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>gazebo_ros</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <controller_interface plugin="${prefix}/config/roberto_sim_controllers_plugins.xml"/>

  </export>
</package>
