<?xml version="1.0"?>
<package>
  <name>roberto_gazebo</name>
  <version>0.0.0</version>
  <description>The roberto gazebo package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="mathias@todo.todo">Mathias Koch</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roberto_msgs</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>roberto_models_jade</run_depend>
  <run_depend>roberto_msgs</run_depend>
  <run_depend>roberto_control</run_depend>
  <run_depend>gazebo_ros</run_depend> 


  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>
</package>
